--- a/index.html
+++ b/index.html
@@ -49,34 +49,32 @@
 
 
 
-
-
-
-    
-  
-
  <div class="rozdelenie-clankov"> 
 
  <div class="clanky-mobil" style="">
-    <div  align="center"><img class="mobile-responsive-img" src="img/hk-spisska-nova-ves-25_11_2019-22_20.jpg" height="350" width="500"></div>
-    <span class="news">News</span>📢
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK SPIŠSKÁ NOVÁ VES - MAJSTER 🏆</p>
-       <h4>Víťazný pohár Vladimíra Dzurillu dnes nad hlavu zdvihla <b>Spišská Nová Ves</b>, ktorá sa oficiálne stáva prvým majstrom Tipsport ligy! Po výhre 2:1 na série vo finále, kde porazila <b>Trenčín</b>. Oslavy na Spiši tak môžu začať v plnom prúde. Hráči <b>Dukly</b> si tak odnášajú strieborné medaile a <b>HC Košice</b> získali bronzovú medailu v boji o 3.miesto.</h4>
-   </div> 
-
-   <div class="clanky-mobil" style="">
-    <div  align="center"><img class="mobile-responsive-img" src="img/interview-dukla.png" height="257"></div>
-    <span class="news">News</span>📢
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">HK Dukla Trenčín odstupuje zo súťaže🛑</p>
-       <h4>V lige nastala ďalšia ale už žiaľ nepekná zmena. Dukla opúšťa Tipsport ligu, kvôli strate manažéra a vynechá celú 2.sezónu a nám neostáva nič iné len poďakovať za účasť v prvej sezóne, kde to Trenčín dotiahol až na striebornú medailu. Snáď sa vedeniu klubu podarí získať do ďalších sezón nového manažéra. Klub sa taktiež bude snažiť rokovať aj s doterajším manažérom a o priebehu jednania nás bude informovať. Tak či onak vedenie ligy ich návrat späť privíta s veľkou náručou. </h4>
-   </div> 
-
-   <div class="clanky-mobil" style="">
-    <div  align="center"><img class="mobile-responsive-img" src="img/interview-bb.png" height="257"></div>
-    <span class="news">News</span>📢
-       <p style="font-weight: bold; font-size:20px; padding-top: 10px; color: #000000; text-align: left; ">Manažérske kreslo v Bystrici</p>
-       <h4>Zmena nastala na poste manažéra v Banskej Bystrici, kde vedenie klubu zmenilo manažéra. Novým manažérom klubu <b>HC `05 Banská Bystrica</b>, ktorý prešiel pracovným pohovorom sa stáva <b>steeve</b>. V turnaji prajeme veľa úspechov na mieste manažéra.</h4>
+    <div  align="center"><img class="mobile-responsive-img" src="img/derby-1.jpg" height="300" width="500"></div>
+    <span class="news">News</span>
+       <p class="article-title">3.kolo za nami! 📢</p>
+       <h4>V treťom kole sa odohralo derby medzi <strong>Slovanom</strong> a <strong>Banskou Bystricou</strong>, kde Bystrica porazila Slovan na ich domácom ľade <strong>4:2</strong> a berie si tak domov 3 dôležité body. Slovan nás túto sezónu asi taktiež neprekvapí. 0 bodov z troch zápasov tomu nasvedčuje. Na prvej pozícií po 3.kole ostáva <strong>Bardejov</strong> a hneď na druhej priečke <strong>Poprad</strong>. Na chvoste tabuľky ostáva <strong>Nitra </strong>. Hviezdou kola sa stáva <strong>Ján Galis</strong>(3+1) zo <strong>Spišskej</strong>.</h4>
    </div>    
+
+ <div class="clanky-mobil" style="">
+    <div  align="center"><img class="mobile-responsive-img" src="img/nitra-hraci.jpg" height="300" width="500"></div>
+    <span class="news">News</span>
+       <p class="article-title">Nováčik sa trápi📢</p>
+       <h4><strong>Nitra</strong> na svoj vstup do Tipsport ligy nebude asi dobre spomínať. V prvých troch zápasoch nezískala ani jeden bod. V troch zápasoch dokázali trafiť súperovú bránku len šesť krát. Gólovo horšie na tom je už len Slovan(4). Dočkáme sa konečne v 4.kole nejakých bodov na účte Nitry? Skalica rozhodne nie je ľahký súper. Veríme, že vedenie klubu správne namotivuje svojich hráčov k zisku troch bodov.</h4>
+   </div> 
+
+   <div class="clanky-mobil" style="">
+    <div  align="center"><img class="mobile-responsive-img" src="img/bardejov-hraci.jpg" height="300" width="500"></div>
+    <span class="news">News</span>
+       <p class="article-title">Famózny štart📢</p>
+       <h4>Náš druhý nováčik z <strong>Bardejova</strong> to vzal z opačného konca ako Nitra. Po treťom kole je na vrchole tabuľky s famóznym skóre 14:7! V prvom kole si aj hravo poradil s Košicami a hráči na čele s manažérom ukázali, že sa neboja aj väčších klubov. <strong>Bardejov</strong> tak má načrtnuté na veľmi sľubnú sezónu, kde by to mohol dotiahnúť ďaleko aj v play-off.</h4>
+   </div>
+
+   
+
+       
 
  </div> 
 
