--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
        <p class="article-title">Famózny štart📢</p>
        <h4>Náš druhý nováčik z <strong>Bardejova</strong> to vzal z opačného konca ako Nitra. Po treťom kole je na vrchole tabuľky s famóznym skóre 14:7! V prvom kole si aj hravo poradil s Košicami a hráči na čele s manažérom ukázali, že sa neboja aj väčších klubov. <strong>Bardejov</strong> tak má načrtnuté na veľmi sľubnú sezónu, kde by to mohol dotiahnúť ďaleko aj v play-off.</h4>
    </div>
-
-   
-
-       
-
  </div> 
 
 
@@ -99,18 +94,22 @@
                             <td>0+4</td>
                             <td>1</td>
                         </tr>
-
                         <tr>
                             <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="33"></td>    
                             <td>Hvedar Olsa</td>
                             <td>3+0</td>
                             <td>2</td>
                         </tr>
-
                         <tr>
                             <td><img id="hrac-tyzdna-snv" src="img/logo/hk_spisská_nová_ves.png" height="33"></td>    
                             <td>Ján Galis</td>
                             <td>3+1</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td><img id="hrac-tyzdna-dt" src="img/logo/hc_07_detva.png" height="33"></td>    
+                            <td>Egon Sopík</td>
+                            <td>3+0</td>
                             <td>3</td>
                         </tr>
                       
