--- a/standings.html
+++ b/standings.html
@@ -259,6 +259,20 @@
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
+                            </tr>
+                            <tr>
+                                <td class="nepostupuje">14.</td>
+                                <td class="logo"><img src="img/logo/piestany.png" height="16"></td>
+                                <td class="club-name"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
+                                <td class="stats">1</td>
+                                <td class="stats">0</td>
+                                <td class="stats">0</td>
+                                <td class="stats">0</td>
+                                <td class="stats">1</td>
+                                <td class="stats">0:3</td>
+                                <td class="stats">-3</td>
+                                <td class="stats"><strong>0</strong></td>
+                                <td class="forma"><img src="img/lose.png" height="18"></td>
                             </tr>  
                             
                             
