--- a/schedule.html
+++ b/schedule.html
@@ -47,13 +47,13 @@
                         <tbody>
                             <tr>
                                 <td ></td>
-                                <td id="small-logo-trencin"></td>
-                                <td style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
                                 <td ></td>
-                                <td  id="small-logo-michalovce"></td>
+                                <td><img src="img/small/michalovce-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29167" style="color: black;">Michalovce</a></td> 
                                 <td></td>
                             </tr>
@@ -70,13 +70,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-poprad"></td>
+                                <td><img src="img/small/poprad-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=7347" style="color: black;">Poprad</a></td>
                                 <td>1</td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-skalica"></td>
+                                <td><img src="img/small/skalica-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2991"style="color: black;">Skalica</a></td> 
                                 <td>2</td>
                             </tr>
@@ -93,13 +93,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-nitra"></td>
+                                <td><img src="img/small/nitra-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58877" style="color: black;">Nitra</a></td>
                                 <td>4</td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-bb"></td>
+                                <td><img src="img/small/bb-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=28026" style="color: black;">Banská Bystrica</a></td> 
                                 <td>5</td>
                             </tr>
@@ -116,13 +116,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-snv"></td>
+                                <td><img src="img/small/snv-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=25632"style="color: black;">Spišská Nová Ves</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-mikulas"></td>
+                                <td><img src="img/small/mikulas-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=23979" style="color: black;">Liptovský Mikuláš</a></td> 
                                 <td></td>
                             </tr>
@@ -138,13 +138,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-slovan"></td>
+                                <td><img src="img/small/slovan-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=37887" style="color: black;">Slovan Bratislava</a></td>
                                 <td>1</td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-zvolen"></td>
+                                <td><img src="img/small/zvolen-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=19732" style="color: black;">Zvolen</a></td> 
                                 <td>2</td>
                             </tr>
@@ -160,13 +160,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-kosice"></td>
+                                <td><img src="img/small/kosice-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=9011" style="color: black;">Košice</a></td>
                                 <td>1</td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-bardejov"></td>
+                                <td><img src="img/small/bardejov-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=5669" style="color: black;">Bardejov</a></td> 
                                 <td>3</td>
                             </tr>
@@ -182,13 +182,13 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td id="small-logo-zilina"></td>
+                                <td><img src="img/small/zilina-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=47695"style="color: black;">Žilina</a></td>
                                 <td>3</td> 
                             </tr>
                              <tr>
                                 <td></td>
-                                <td id="small-logo-detva"></td>
+                                <td><img src="img/small/detva-small.png"></td>
                                 <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=58552" style="color: black;">Detva</a></td> 
                                 <td>2</td>
                             </tr>
@@ -240,8 +240,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -416,8 +416,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Dukla Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -604,8 +604,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -780,8 +780,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td>0</td> 
                             </tr>
                              <tr>
@@ -968,8 +968,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1144,8 +1144,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1310,8 +1310,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1442,8 +1442,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1586,8 +1586,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1718,8 +1718,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
@@ -1862,8 +1862,8 @@
                             </tr>
                              <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td> 
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td>
                             </tr>
                            </tbody>
@@ -1994,8 +1994,8 @@
                         <tbody>
                             <tr>
                                 <td></td>
-                                <td><img src="img/small/trencin-small.png"></td>
-                                <td  style="background-color: red;"><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=29244" style="color: black;">Trenčín</a></td>
+                                <td><img src="img/small/piestany-small.png"></td>
+                                <td><a href="https://www.hockeyarena.net/sk/index.php?p=public_team_info_basic.php&team_id=2589" style="color: black;">Piešťany</a></td>
                                 <td></td> 
                             </tr>
                              <tr>
