--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                             <td>3+0</td>
                             <td>3</td>
                         </tr>
+                        <tr>
+                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_dukla_michalovce.png" height="33"></td>    
+                            <td>Muli Ziglin</td>
+                            <td>3+1</td>
+                            <td>4</td>
+                        </tr>
                       
                     </tbody>
                 </table>  
