--- a/standings.html
+++ b/standings.html
@@ -259,6 +259,7 @@
                                 <td class="stats"><strong>3</strong></td>
                                 <td class="forma"><img src="img/win.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>
+                                <td class="forma"></td>
                             </tr>   
                             <tr>
                                 <td class="nepostupuje">14.</td>
