--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 <div class="uvod">
     <div style="display: flex;">
-        <img class="mobile-responsive-img" src="img/clubs/kosice.jpg" width="1200" height="650">
+        <img class="mobile-responsive-img" src="img/hokej-BJ-P-ahoj-2.jpg" width="1200" height="650">
     </div>    
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
-            <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/hc_05_banská_bystrica.png" height="100"> 3:1 <img src="img/logo/hc_kosice.png" height="100"></h1>
-            <h3 style="text-transform: uppercase; color: black;"> Bystrica si v ich druhom derby vybojovala ďalšie <span style="color: #4285f4">víťaztvo</span></h3>
+            <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/bardejov.png" height="100"></h1>
+            <h3 style="text-transform: uppercase; color: black;"> Nezastaviteľný Bardejov - budúci držiteľ <strong>pohára</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span>?</h3>
         </div>    
     </article>
 </div>
