--- a/playoff.html
+++ b/playoff.html
@@ -78,7 +78,7 @@
      <img class="pohar-tp-playoff" src="img/pohar_dzurilla.png" height="250" style="opacity: 0.7; margin-top: 40px;">
     <div class="split split-one">
         <div class="round round-one current">
-            <div class="round-details">Semifinále konferencie<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
+            <div class="round-details">Štvrťfinále<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom" style="/*background-color: rgb(218,165,32, 0.8);*/"><span class="score"></span></li>
@@ -99,7 +99,7 @@
         </div>  <!-- END ROUND QUATER -->
 
         <div class="round round-two current"> <!-- DOPISAT "CURRENT" ZA ROUND-TWO --> 
-            <div class="round-details">Finále konferencie<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
+            <div class="round-details">Semifinále<br/><span class="date"></span></div> <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN -->         
             <ul class="matchup">
                 <li class="team team-top"><span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
