--- a/index.html
+++ b/index.html
@@ -101,6 +101,24 @@
                             <td>3+1</td>
                             <td>5.</td>
                         </tr>
+                        <tr>
+                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_poprad.png" height="33"></td>    
+                            <td>Guy Knowles</td>
+                            <td>1+4</td>
+                            <td>6.</td>
+                        </tr>
+                        <tr>
+                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_poprad.png" height="33"></td>    
+                            <td>Martin Jones</td>
+                            <td>3+2</td>
+                            <td>7.</td>
+                        </tr>
+                        <tr>
+                            <td><img id="hrac-tyzdna-snv" src="img/logo/hk_spisská_nová_ves.png" height="33"></td>    
+                            <td>Radzislau Krasavik  </td>
+                            <td>3+0</td>
+                            <td>8.</td>
+                        </tr>
                       
                     </tbody>
                 </table>  
