--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                             <td>5.</td>
                         </tr>
                         <tr>
-                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_poprad.png" height="33"></td>    
+                            <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="33"></td>    
                             <td>Guy Knowles</td>
                             <td>1+4</td>
                             <td>6.</td>
                         </tr>
                         <tr>
-                            <td><img id="hrac-tyzdna-mi" src="img/logo/hk_poprad.png" height="33"></td>    
+                            <td><img id="hrac-tyzdna-pp" src="img/logo/hk_poprad.png" height="33"></td>    
                             <td>Martin Jones</td>
                             <td>3+2</td>
                             <td>7.</td>
