--- a/standings.html
+++ b/standings.html
@@ -209,7 +209,7 @@
                                 <td class="stats">-9</td>
                                 <td class="stats"><strong>7</strong></td>
                                 <td class="forma"><img src="img/win.png" height="18"></td>
-                                <td class="forma"><img src="img/win.png" height="18"></td>
+                                <td class="forma"><img src="img/lose.png" height="18"></td>
                                 <td class="forma"><img src="img/lose.png" height="18"></td>            
                             </tr> 
                             <tr>
