--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <article class="clanok-uvod">
         <div style=" display: block; padding-left: 50px;">
             <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/bardejov.png" height="100"></h1>
-            <h3 style="text-transform: uppercase; color: black;"> Nezastaviteľný Bardejov - budúci držiteľ <strong>pohára</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span>?</h3>
+            <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span>?</h3>
         </div>    
     </article>
 </div>
