--- a/playoff.html
+++ b/playoff.html
@@ -80,7 +80,7 @@
         <div class="round round-one current">
             <div class="round-details">Štvrťfinále<br/><span class="date"></span></div>  <!-- DOPISAT DATUMY ZAPASOV DO DATE SPAN --> 
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/bardejov.png" height="20"> Bardejov<span class="score"></span></li>
                 <li class="team team-bottom" style="/*background-color: rgb(218,165,32, 0.8);*/"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
@@ -88,7 +88,7 @@
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
-                <li class="team team-top"><span class="score"></span></li>
+                <li class="team team-top"><img src="img/logo/hk_poprad.png" height="20"> Poprad<span class="score"></span></li>
                 <li class="team team-bottom"><span class="score"></span></li>
             </ul>
             <ul class="matchup">
