--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div  align="center"><img class="mobile-responsive-img" src="img/tasr-puk-tipsport-liga.jpg" height="300" width="500"></div>
     <span class="news">News</span>
        <p class="article-title">11.kolo za nami📢</p>
-       <h4>Po 11.kole je boj o postupové priečky stále v plnom prúde. Bardejov a Poprad si môžu vydýchnúť pred play-off, pretože ich miestenky z prvých dvoch miest im už nemôže nik vziať. Naopak boj o 3. až 8. miesto je veľmi napínavý. V hre sú dokonca aj tímy mimo postupových priečok, ktoré majú šancu atakovať na 7. a 8. priečku. Horúci adept o udržanie sa v play-off sú aj HC Košice, ktoré nezažívajú najlepšiu sezónu ale vedenie a manažér klubu veria, že sa dostanú do play-off kde by mohli ešte zamiešať karty. Ako sa vraví play-off je úplne iná súťaž a všetko môže dopadnút inak ako by sme očakávali.</h4>
+       <h4>Po 11.kole je boj o postupové priečky stále v plnom prúde. Bardejov a Poprad si môžu vydýchnúť pred play-off, pretože ich miestenky z prvých dvoch miest im už nemôže nik vziať. Naopak boj o 3. až 8. miesto je veľmi napínavý. V hre sú dokonca aj tímy mimo postupových priečok, ktoré majú šancu atakovať na 7. a 8. priečku. Horúci adept o udržanie sa v play-off sú aj HC Košice, ktoré nezažívajú najlepšiu sezónu ale vedenie a manažér klubu veria, že sa dostanú do play-off kde by mohli ešte zamiešať karty. Veľký zálusk si na play-off robí aj Detva či Žilina, ktoré majú ťažký žreb posledného dvojkola. Obe celky hrajú totiž proti Košiciam. Zdá sa, že tieto zápasy asi rozhodnú o budúcnosti play-off. Vo väčšom ohrození je taktiež aj Skalica, ktorá má v poslednom kole Basnkú Bystricu. Ako sa vraví play-off je úplne iná súťaž a všetko môže dopadnút inak ako by sme očakávali.</h4>
    </div> 
        
  </div> 
