--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div style=" display: block; padding-left: 50px;">
             <h1 style="text-transform: uppercase; color: black; padding-top: 250px;"><img src="img/logo/bardejov.png" height="100"></h1>
             <h3 style="text-transform: uppercase; color: black;"> Očakávania sa naplnili a Bardejov získava <strong>pohár</strong>  <span style="color: #4285f4"> <strong>Dušana Pašeka</strong></span></h3>
+            <h4> <strong>V diskusii bude prebiehať prihlasovačka na další ročník tak kto chce hrať nech sa tam zapíše prosím!!!!</strong> </h4>
         </div>    
     </article>
 </div>
@@ -55,6 +56,7 @@
     <span class="news">News</span>
        <p class="article-title">Predčasné oslavy? Bardejov vyhral základnú časť📢</p>
        <h4> Nováčik Bardejov si zobral na seba príliš veľké sústo ale dokázal ho ustáť a konečne sa môže zaslúžene tešiť z 1.miesta v základnej časti. Bardejov šiel 11.kôl bez prehry, v ktorých si vybojoval pohar Dušana Pašeka a tak sa stáva jeho prvým držiteľom. Hoc aj ostávajú 2 kola do konca základnej časti Bardejov má 1.priečku už istú. Aké sú však reálne šance pre Bardejov v play-off? Rozhodne vysoké, pretože Bradejov hraje veľmi dobrý a kvalitný hokej, na ktorý nenašiel recept ani Poprad, ktorý im je v momentálnom ročníku asi najväčším konkurentom. Klub, ktorý sa umiestni na 8.mieste v zákaldnej časti to rozhodne nebude mať ľahké. Bardejov ma veľmi silnú obranu, ktorá dostala zatiaľ len 19 gólov! čo je najmenej v tejto sezóne. Ich útok patrí taktiež medzi najlepších. Viac gólov sa podarilo streliť už len práve spomínanému Popradu. Bardejov nemá veľkú slabinu, ktorej by sa mohol súper chytiť a tým sa to celé sťažilo každému celku, ktorý nastúpil proti nim. Z pohľadu organizátora má Bardejov nabehnuté až do finále play-off. Podarí sa niekomu ich zastaviť?</h4>
+
    </div> 
 
    <div class="clanky-mobil" style="">
